# tornadopy

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml
tornadopy/: __init__.py  _colors.py  _interactive.py  correlation.py  distribution.py  plot.py  processor.py
